--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main  # Запуск при PR в main
-  workflow_dispatch:  # Ручной запуск
+  workflow_dispatch:  # Ручной запуск через GitHub Actions UI
 
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3  # Клонирует код
+        uses: actions/checkout@v4  # Обновлённая версия
 
       - name: Install dependencies
         run: sudo apt update && sudo apt install -y g++
@@ -24,41 +24,21 @@ jobs:
         run: make
 
       - name: Save artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Обновлённая версия
         with:
           name: compiled-program
           path: programm  # Сохранение бинарника
 
   test:
     runs-on: ubuntu-latest
-    needs: build  # Ждёт окончания сборки
+    needs: build  # Запуск после успешной сборки
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: sudo apt update && sudo apt install -y g++
 
       - name: Run tests
         run: make test
-
-  release:
-    runs-on: ubuntu-latest
-    needs: test  # Запускается после тестов
-    if: startsWith(github.ref, 'refs/tags/')  # Только при создании тега
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: sudo apt update && sudo apt install -y g++
-
-      - name: Build release
-        run: make
-
-      - name: Upload release artifact
-        uses: softprops/action-gh-release@v1
-        with:
-          files: programm
