--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: sudo apt update && sudo apt install -y g++
 
       - name: Compile program
-        run: make
+        run: make -C src
 
       - name: Save artifact
         uses: actions/upload-artifact@v4  # Обновлённая версия
@@ -41,4 +41,4 @@ jobs:
         run: sudo apt update && sudo apt install -y g++
 
       - name: Run tests
-        run: make test
+        run: make -C src test
