--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/upload-artifact@v4  # Обновлённая версия
         with:
           name: compiled-program
-          path: usr/bin/matrix  # Сохранение бинарника
+          path: src/programm    # Сохранение бинарника
               
   test:
     runs-on: ubuntu-latest
