--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           name: compiled-program
           path: src/programm    # Сохранение бинарника
+          
       - name: Debug Files
         run: ls -R
               
@@ -50,6 +51,9 @@ jobs:
     needs: test  # Запуск после успешного теста
 
     steps:
+      - name: Debug Files
+        run: ls -R
+    
       - name: Create Debian package
         run: |
           mkdir -p package/DEBIAN
